preview page for imported checkitems

--- a/review/templates/review/importchkitm.html
+++ b/review/templates/review/importchkitm.html
@@ -11,6 +11,23 @@ Import CheckItem
 		<div class="form-group">
 			<label for="excel_tab" class="control-label">CheckItems</label>
 			<textarea class="form-control" name="excel_tab" id="excel_tab" rows="9"></textarea>
+			<span class="help-block">
+				<strong>Excel Format</strong>
+				<table class="table">
+					<thead>
+						<th>Category</th>
+						<th>Title</th>
+						<th>Details</th>
+					</thead>
+					<tbody>
+						<tr>
+							<td>prefix of question code</td>
+							<td>question title</td>
+							<td>question detail<br />*support MarkDown</td>
+						</tr>
+					</tbody>
+				</table>
+			</span>
 		</div>
 		<button type="submit" class="btn btn-primary">OK</button>
 	</form>
