--- a/review/templates/review/project.html
+++ b/review/templates/review/project.html
@@ -7,7 +7,7 @@
 	<div class="page-header">
 		<h2>
 			{{ project.title }}
-			<a href="{% url 'review:projectedit' project.id %}">
+			<a href="{% url 'review:projectedit' project.code %}">
 				<abbr title="Edit Project"><span class="glyphicon glyphicon-pencil"></span></abbr>
 			</a>
 		</h2>
@@ -21,6 +21,20 @@
 			<tr>
 				<td>{{ grp.title }}</td>
 				<td>{{ grp.details }}</td>
+			</tr>
+		{% endfor %}
+		</tbody>
+	</table>
+	<table class="table table-hover table-striped">
+		<thead>
+			<td>Title</td><td>Group</td><td>Choice</td>
+		</thead>
+		<tbody>
+		{% for chk in checks %}
+			<tr>
+				<td><a href="{% url 'review:reportnew' chk.code %}"><abbr title="New Report"><span class="glyphicon glyphicon-plus"></span></abbr></a>{{ chk.title }}</td>
+				<td>{{ chk.groups }}</td>
+				<td>{{ chk.choices }}</td>
 			</tr>
 		{% endfor %}
 		</tbody>
