--- a/review/templates/review/managechkgrp.html
+++ b/review/templates/review/managechkgrp.html
@@ -1,4 +1,5 @@
 {% extends 'review/base.html' %}
+{% load staticfiles %}
 
 {% block title %}Manage CheckGroups{% endblock %}
 
@@ -6,12 +7,14 @@
 <div class="container">
 	<form class="form" action="{% url 'review:managecheckgroup' projectcode %}" method="POST">
 		{% csrf_token %}
-		<table class="table table-hover table-striped">
+		<table class="table table-hover table-striped" id="radiotable">
 			<thead>
-				<td>Item</td>
-				{% for grp in groups %}
-					<td>{{ grp.title }}</td>
-				{% endfor %}
+				<tr>
+					<td>Item</td>
+					{% for grp in groups %}
+						<td>{{ grp.title }}</td>
+					{% endfor %}
+				</tr>
 			</thead>
 			<tbody>
 				{% for row in data %}
@@ -48,4 +51,17 @@
 		<input type="hidden" name="projectcode" value="{{ projectcode }}">
 	</form>
 </div>
+<link rel="stylesheet" type="text/css" href="{% static 'review/datatables/datatables.min.css' %}">
+<script type="text/javascript" charset="utf8" src="{% static 'review/datatables/datatables.min.js' %}"></script>
+<script type="text/javascript">
+	$(document).ready(function() {
+			$('#radiotable').DataTable({
+				scrollY: 300,
+				scrollX: true,
+				scrollCollapse: true,
+				paging: false,
+				fixedColumns: true
+				});
+		});
+</script>
 {% endblock %}
