--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -4,9 +4,7 @@
 
 {% block body %}
 <div class="container">
-	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			</div>
-	<table class="table table-hover table-striped">
+	<table class="table table-hover table-striped" id="prjtable">
 		<thead>
 			<td><a href="{% url 'review:projectedit' 0 %}"><abbr title="New Project"><span class="glyphicon glyphicon-plus"></span></abbr></a>Title</td>
 			<td>Status</td>
@@ -21,4 +19,9 @@
 		</tbody>
 	</table>
 </div>
+<script type="text/javascript">
+	$(document).ready(function() {
+			$('#prjtable').DataTable();
+		});
+</script>
 {% endblock %}
