--- a/review/templates/review/editselfcheck.html
+++ b/review/templates/review/editselfcheck.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-	<form class="form" action="{% url 'review:editselfcheck' form.report.id %}" method="POST">
+	<form class="form" action="{% url 'review:editselfcheck' form.project.code form.report.id %}" method="POST">
 		{% csrf_token %}
 		{% for groupinfo in form.groups %}
 			<div class="panel panel-default">
