--- a/review/templates/review/managechklst.html
+++ b/review/templates/review/managechklst.html
@@ -36,7 +36,7 @@
 		<input type="hidden" name="listinfo" value="{{ listinfo }}">
 		<input type="hidden" name="initial" value="{{ initial }}">
 	</form>
-	<form class="form" action="{% url 'review:addchecklist' %}" method="POST">
+	<form class="form" action="{% url 'review:addchecklist' projectcode %}" method="POST">
 		{% csrf_token %}
 		<div class="form-group">
 			<label class="control-label" for="title">List Title:</label>
