--- a/review/templates/review/newpeercheck.html
+++ b/review/templates/review/newpeercheck.html
@@ -44,7 +44,7 @@
 			</div>
 		</div>
 	</div>
-	<form class="form" action="{% url 'review:newpeercheck' form.subproject.code form.checklist.code %}" method="POST">
+	<form class="form" action="{% url 'review:newpeercheck' form.project.code form.subproject.code form.checklist.code %}" method="POST">
 		{% csrf_token %}
 		{% for groupinfo in form.groups %}
 			<div class="panel panel-default">
