--- a/review/templates/review/newselfcheck.html
+++ b/review/templates/review/newselfcheck.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-	<form class="form" action="{% url 'review:newselfcheck' form.subproject.code form.checklist.code %}" method="POST">
+	<form class="form" action="{% url 'review:newselfcheck' form.project.code form.subproject.code form.checklist.code %}" method="POST">
 		{% csrf_token %}
 		{% for groupinfo in form.groups %}
 			<div class="panel panel-default">
