--- a/review/templates/review/subproject.html
+++ b/review/templates/review/subproject.html
@@ -14,11 +14,19 @@
 	{% for chk in checklists %}
 		{% if chk.selfcheck %}
 			<li>
-				<a href="{% url 'review:newselfcheck' subproject.code chk.code %}">{{ chk.title }}</a>
+				{% if permission > 2 %}
+					{% if chk.clickable %}
+						<a href="{% url 'review:newselfcheck' subproject.project subproject.code chk.code %}">{{ chk.title }}</a>
+					{% else %}
+						{{ chk.title }}
+					{% endif %}
+				{% else %}
+					{{ chk.title }}
+				{% endif %}
 				{% if chk.reports %}
 					<ol>
 						{% for report in chk.reports %}
-							<li><a href="{% url 'review:editselfcheck' report.id %}">{{ report.title }}</a></li>
+							<li><a href="{% url 'review:editselfcheck' subproject.project report.id %}">{{ report.title }}</a></li>
 						{% endfor %}
 					</ol>
 				{% endif %}
@@ -31,11 +39,23 @@
 	{% for chk in checklists %}
 		{% if not chk.selfcheck %}
 			<li>
-				<a href="{% url 'review:newpeercheck' subproject.code chk.code %}">{{ chk.title }}</a>
+				{% if permission > 2 %}
+					{% if selfcheck %}
+						{% if chk.clickable %}
+							<a href="{% url 'review:newpeercheck' subproject.project subproject.code chk.code %}">{{ chk.title }}</a>
+						{% else %}
+							{{ chk.title }}
+						{% endif %}
+					{% else %}
+						{{ chk.title }}
+					{% endif %}
+				{% else %}
+					{{ chk.title }}
+				{% endif %}
 				{% if chk.reports %}
 					<ol>
 						{% for report in chk.reports %}
-							<li><a href="{% url 'review:editpeercheck' report.id %}">{{ report.title }}</a></li>
+							<li><a href="{% url 'review:editpeercheck' subproject.project report.id %}">{{ report.title }}</a></li>
 						{% endfor %}
 					</ol>
 				{% endif %}
