--- a/review/templates/review/managechkgrp.html
+++ b/review/templates/review/managechkgrp.html
@@ -1,9 +1,10 @@
-{% extends 'review/base.html' %}
+{% extends 'review/base_js.html' %}
 {% load staticfiles %}
 
 {% block title %}Manage CheckGroups{% endblock %}
 
 {% block body %}
+{{ block.super }}
 <div class="container">
 	<form class="form" action="{% url 'review:managecheckgroup' projectcode %}" method="POST">
 		{% csrf_token %}
@@ -43,11 +44,11 @@
 		{% csrf_token %}
 		<div class="form-group">
 			<label class="control-label" for="title">Group Title:</label>
-			<div class="form-control">
-				<input type="text" id="title" name="title" placeholder="Enter new group title">
-			</div>
+			<input type="text" class="form-control" id="title" name="title" placeholder="Enter new group title">
 		</div>
-		<button type="submit" class="btn btn-primary">OK</button>
+		<div class="form-group">
+			<button type="submit" class="btn btn-primary">OK</button>
+		</div>
 		<input type="hidden" name="projectcode" value="{{ projectcode }}">
 	</form>
 </div>
