--- a/review/templates/review/project.html
+++ b/review/templates/review/project.html
@@ -1,8 +1,9 @@
-{% extends 'review/base.html' %}
+{% extends 'review/base_js.html' %}
 
 {% block title %}Project{% endblock %}
 
 {% block body %}
+{{ block.super }}
 <div class="container">
 	<div class="page-header">
 		<h2>
