--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,38 +1,55 @@
 {% extends "review/base.html" %}
 
 {% block body %}
-{% if form.errors and not form.non_field_errors %}
-<p class="errornote">
-{% if form.errors.items|length == 1 %}Please correct the error below.{% else %}Please correct the errors below.{% endif %}
-</p>
-{% endif %}
-
-{% if form.non_field_errors %}
-{% for error in form.non_field_errors %}
-<p class="errornote">
-    {{ error }}
-</p>
-{% endfor %}
-{% endif %}
-
-<div id="content-main">
-<form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
-  <div class="form-row">
-    {{ form.username.errors }}
-    {{ form.username.label_tag }} {{ form.username }}
-  </div>
-  <div class="form-row">
-    {{ form.password.errors }}
-    {{ form.password.label_tag }} {{ form.password }}
-    <input type="hidden" name="next" value="{{ next }}" />
-  </div>
-  <div class="submit-row">
-    <label>&nbsp;</label><input type="submit" value="Log in" />
-  </div>
-</form>
+<div class="container">
+	{% if form.non_field_errors %}
+		<ul class="text-danger">
+			{% for error in form.non_field_errors %}
+				<li>{{ error }}</li>
+			{% endfor %}
+		</ul>
+	{% endif %}
+	<form class="form" action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
+		<div class="form-group">
+			<label for="{{ form.username.id_for_label }}" class="control-label">{{ form.username.label }}</label>
+			{{ form.username }}
+			{% if form.username.errors %}
+				<span class="help-block">
+					<ul class="text-danger">
+						{% for error in form.username.errors %}
+							<li>{{ error }}</li>
+						{% endfor %}
+					</ul>
+				</span>
+			{% endif %}
+		</div>
+		<div class="form-group">
+			<label for="{{ form.password.id_for_label }}" class="control-label">{{ form.password.label }}</label>
+			{{ form.password }}
+			{% if form.password.errors %}
+				<span class="help-block">
+					<ul class="text-danger">
+						{% for error in form.password.errors %}
+							<li>{{ error }}</li>
+						{% endfor %}
+					</ul>
+				</span>
+			{% endif %}
+		</div>
+		<input type="hidden" name="next" value="{{ next }}" />
+		<div class="form-group">
+			<div class="text-center">
+				<button type="submit" class="btn btn-default">Log in</button>
+			</div>
+		</div>
+	</form>
+</div>
 
 <script type="text/javascript">
 document.getElementById('id_username').focus()
+$(document).ready(function() {
+	$(":text").addClass("form-control");
+	$(":password").addClass("form-control");
+});
 </script>
-</div>
 {% endblock %}
