--- a/review/templates/review/importusr.html
+++ b/review/templates/review/importusr.html
@@ -1,10 +1,11 @@
-{% extends 'review/base.html' %}
+{% extends 'review/base_js.html' %}
 
 {% block title %}
 Import Users
 {% endblock %}
 
 {% block body %}
+{{ block.super }}
 <div class="container">
 	<form class="form" action="{% url 'review:importuser' %}" method="POST">
 		{% csrf_token %}
