--- a/review/templates/review/newselfcheck.html
+++ b/review/templates/review/newselfcheck.html
@@ -1,8 +1,9 @@
-{% extends 'review/base.html' %}
+{% extends 'review/base_js.html' %}
 
 {% block title %}New Report{% endblock %}
 
 {% block body %}
+{{ block.super }}
 <div class="container">
 	<form class="form" action="{% url 'review:newselfcheck' form.project.code form.subproject.code form.checklist.code %}" method="POST">
 		{% csrf_token %}
