--- a/review/templates/review/previewsubprj.html
+++ b/review/templates/review/previewsubprj.html
@@ -1,4 +1,4 @@
-{% extends 'review/base.html' %}
+{% extends 'review/base_js.html' %}
 {% load staticfiles %}
 
 {% block title %}
@@ -6,6 +6,7 @@ Preview Sub Projects
 {% endblock %}
 
 {% block body %}
+{{ block.super }}
 <div class="container">
 	<form class="form" action="{% url 'review:addsubproject' projectcode %}" method="POST">
 		{% csrf_token %}
