--- a/review/templates/review/subproject.html
+++ b/review/templates/review/subproject.html
@@ -6,9 +6,10 @@
 {{ block.super }}
 <div class="container">
 	<div class="page-header">
-		<h2>
-			{{ subproject.title }}
-		</h2>
+		<h2>详细情报：</h2>
+		<div class="markdown">
+			{{ subproject.details }}
+		</div>
 	</div>
 	<h3>SelfCheck</h3>
 	<ul>
@@ -25,11 +26,34 @@
 					{{ chk.title }}
 				{% endif %}
 				{% if chk.reports %}
-					<ol>
-						{% for report in chk.reports %}
-							<li><a href="{% url 'review:editselfcheck' subproject.project report.id %}">{{ report.title }}</a></li>
-						{% endfor %}
-					</ol>
+					<table class="table table-hover table-striped">
+						<thead>
+							<tr>
+								<th>Title</th>
+								<th>状态</th>
+								<th>OK</th>
+								<th>NG</th>
+								<th>IG</th>
+								<th>修正中指摘</th>
+								<th>确认中指摘</th>
+								<th>已完成指摘</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for report in chk.reports %}
+								<tr>
+									<td><a href="{% url 'review:editselfcheck' subproject.project report.id %}">{{ report.title }}</a></td>
+									<td>{{ report.status.status }}</td>
+									<td>{{ report.status.OK }}</td>
+									<td>{{ report.status.NG }}</td>
+									<td>{{ report.status.IG }}</td>
+									<td>{{ report.status.BUGA }}</td>
+									<td>{{ report.status.BUGC }}</td>
+									<td>{{ report.status.BUGD }}</td>
+								</tr>
+							{% endfor %}
+						</tbody>
+					</table>
 				{% endif %}
 			</li>
 		{% endif %}
@@ -54,15 +78,47 @@
 					{{ chk.title }}
 				{% endif %}
 				{% if chk.reports %}
-					<ol>
-						{% for report in chk.reports %}
-							<li><a href="{% url 'review:editpeercheck' subproject.project report.id %}">{{ report.title }}</a></li>
-						{% endfor %}
-					</ol>
+					<table class="table table-hover table-striped">
+						<thead>
+							<tr>
+								<th>Title</th>
+								<th>状态</th>
+								<th>OK</th>
+								<th>NG</th>
+								<th>IG</th>
+								<th>修正中指摘</th>
+								<th>确认中指摘</th>
+								<th>已完成指摘</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for report in chk.reports %}
+								<tr>
+									<td><a href="{% url 'review:editpeercheck' subproject.project report.id %}">{{ report.title }}</a></td>
+									<td>{{ report.status.status }}</td>
+									<td>{{ report.status.OK }}</td>
+									<td>{{ report.status.NG }}</td>
+									<td>{{ report.status.IG }}</td>
+									<td>{{ report.status.BUGA }}</td>
+									<td>{{ report.status.BUGC }}</td>
+									<td>{{ report.status.BUGD }}</td>
+								</tr>
+							{% endfor %}
+						</tbody>
+					</table>
 				{% endif %}
 			</li>
 		{% endif %}
 	{% endfor %}
 	</ul>
 </div>
+<script type="text/javascript">
+	$(document).ready(function() {
+		var converter = new showdown.Converter();
+		tds = $(".markdown");
+		for (var i = 0; i < tds.length; i++) {
+			tds[i].innerHTML = converter.makeHtml(tds[i].innerHTML);
+		}
+	});
+</script>
 {% endblock %}
