--- a/account/templates/account/logged_out.html
+++ b/account/templates/account/logged_out.html
@@ -6,4 +6,6 @@
 
 <p><a href="{% url 'account:index' %}">Log in again</a></p>
 
+<p><a href="{% url 'review:index' %}">Review System</a></p>
+
 {% endblock %}
