--- a/review/templates/review/editpeercheck.html
+++ b/review/templates/review/editpeercheck.html
@@ -52,6 +52,9 @@
 				<div class="panel-heading">
 					<h4 class="panel-title">
 						<a data-toggle="collapse" href="#collapse{{ groupinfo.group.id }}">{{ groupinfo.group.title }}</a>
+						{% if groupinfo.group.summary.NG > 0 %}
+							<label class="text-danger text-center">NG:{{ groupinfo.group.summary.NG }}件 需要修正:{{ groupinfo.group.summary.BUGA }}件 需要确认:{{ groupinfo.group.summary.BUGC }}件</label>
+						{% endif %}
 						<a class="pull-right" href="javascript:void(0)" onclick="grpclick(this)" id="valid-{{ groupinfo.group.id }}">
 							{% ifequal groupinfo.group.valid '1' %}
 								有効
@@ -62,11 +65,30 @@
 					</h4>
 				</div>
 				<input type="hidden" name="group-valid-{{ groupinfo.group.id }}" id="group-valid-{{ groupinfo.group.id }}" value="{{ groupinfo.group.valid }}">
-				<div id="collapse{{ groupinfo.group.id }}" class="panel panel-collapse collapse in">
+				<div id="collapse{{ groupinfo.group.id }}" class="panel panel-collapse collapse">
 					<div class="panel-body">
 						{% for item in groupinfo.items %}
+							{% if item.details %}
+								<div class="modal" id="modal-{{ item.name }}" tabindex="-1">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+												<h4 class="modal-title" id="modalLabel">{{ item.title }}</h4>
+											</div>
+											<div class="modal-body markdown">{{ item.details }}</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							{% endif %}
 							<div class="form-group">
-								<label class="control-label" data-toggle="tooltip" data-placement="right" title="{{ item.details }}">{{ item.title }}</label>
+								<label class="control-label">{{ item.code }}. {{ item.title }}</label>
+								{% if item.details %}
+									<a class="details" href="javascript:void(0)" onclick="showdetail(this)" data-target="#modal-{{ item.name }}"><span class="glyphicon glyphicon-question-sign"></span></a>
+								{% endif %}
 								<div class="form-control">
 								{% for radio in form.choice %}
 									<label class="checkbox-inline">
@@ -148,13 +170,16 @@
 				</div>
 			</div>
 		{% endfor %}
-		{% if permission > 2 %}
-			<div class="form-group">
-				<div class="text-center">
-					<button type="submit" class="btn btn-primary">OK</button>
+		{% if form.checklist.lock %}
+		{% else %}
+			{% if permission > 2 %}
+				<div class="form-group">
+					<div class="text-center">
+						<button type="submit" class="btn btn-primary">OK</button>
+					</div>
 				</div>
-			</div>
-			<input type="hidden" name="initvalue" value="{{ initvalue }}">
+				<input type="hidden" name="initvalue" value="{{ initvalue }}">
+			{% endif %}
 		{% endif %}
 	</form>
 </div>
@@ -224,5 +249,16 @@
 			countelement.val(parseInt(itemcount)+1);
 		}
 	}
+	function showdetail(clickitem) {
+		var modal_id = $(clickitem).attr('data-target');
+		$(modal_id).modal();
+	}
+	$(document).ready(function() {
+		var converter = new showdown.Converter();
+		var tds = $(".markdown");
+		for (var i = 0; i < tds.length; i++) {
+			tds[i].innerHTML = converter.makeHtml(tds[i].innerHTML);
+		}
+	});
 </script>
 {% endblock %}
