--- a/review/templates/review/managechkgrp.html
+++ b/review/templates/review/managechkgrp.html
@@ -20,7 +20,7 @@
 			<tbody>
 				{% for row in data %}
 					<tr>
-						<td>{{ row.item.title }}</td>
+						<td>{{ row.item.code }}. {{ row.item.title }}</td>
 						{% for grp in row.groups %}
 							<td>
 								<div class="switch">
