--- a/review/templates/review/newselfcheck.html
+++ b/review/templates/review/newselfcheck.html
@@ -25,8 +25,27 @@
 				<div id="collapse{{ groupinfo.group.id }}" class="panel panel-collapse collapse in">
 					<div class="panel-body">
 						{% for item in groupinfo.items %}
+							{% if item.details %}
+								<div class="modal" id="modal-{{ item.name }}" tabindex="-1">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+												<h4 class="modal-title" id="modalLabel">{{ item.title }}</h4>
+											</div>
+											<div class="modal-body markdown">{{ item.details }}</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							{% endif %}
 							<div class="form-group">
-								<label class="control-label" data-toggle="tooltip" data-placement="right" title="{{ item.details }}">{{ item.title }}</label>
+								<label class="control-label">{{ item.code }}. {{ item.title }}</label>
+								{% if item.details %}
+									<a class="details" href="javascript:void(0)" onclick="showdetail(this)" data-target="#modal-{{ item.name }}"><span class="glyphicon glyphicon-question-sign"></span></a>
+								{% endif %}
 								<div class="form-control">
 								{% for radio in form.choice %}
 									<label class="checkbox-inline">
@@ -71,5 +90,16 @@
 			grplink.text="有効";
 		}
 	}
+	function showdetail(clickitem) {
+		var modal_id = $(clickitem).attr('data-target');
+		$(modal_id).modal();
+	}
+	$(document).ready(function() {
+		var converter = new showdown.Converter();
+		var tds = $(".markdown");
+		for (var i = 0; i < tds.length; i++) {
+			tds[i].innerHTML = converter.makeHtml(tds[i].innerHTML);
+		}
+	});
 </script>
 {% endblock %}
