--- a/review/templates/review/previewchkitm.html
+++ b/review/templates/review/previewchkitm.html
@@ -33,7 +33,7 @@ Preview Import CheckItem
 <script type="text/javascript">
 	$(document).ready(function() {
 		var converter = new showdown.Converter();
-		tds = $(".markdown");
+		var tds = $(".markdown");
 		for (var i = 0; i < tds.length; i++) {
 			tds[i].innerHTML = converter.makeHtml(tds[i].innerHTML);
 		}
