--- a/review/templates/review/previewsubprj.html
+++ b/review/templates/review/previewsubprj.html
@@ -31,7 +31,7 @@ Preview Sub Projects
 <script type="text/javascript">
 	$(document).ready(function() {
 		var converter = new showdown.Converter();
-		tds = $(".markdown");
+		var tds = $(".markdown");
 		for (var i = 0; i < tds.length; i++) {
 			tds[i].innerHTML = converter.makeHtml(tds[i].innerHTML);
 		}
