--- a/review/templates/review/newselfcheck.html
+++ b/review/templates/review/newselfcheck.html
@@ -69,11 +69,13 @@
 				</div>
 			</div>
 		{% endfor %}
-		<div class="form-group">
-			<div class="text-center">
-				<button type="submit" class="btn btn-primary">OK</button>
+		{% if permission.save %}
+			<div class="form-group">
+				<div class="text-center">
+					<button type="submit" class="btn btn-primary">OK</button>
+				</div>
 			</div>
-		</div>
+		{% endif %}
 		<input type="hidden" name="initvalue" value="{{ initvalue }}">
 		<input type="hidden" name="navbarinfo" value="{{ navbarinfo }}">
 	</form>
